@@ -11,7 +11,6 @@ namespace users
 			$section = (\Tools::REQUEST("section"))?:"users";
 			$action = (\Tools::REQUEST("action"))?:"overview";
 
-
 			if (\Tools::REQUEST("loginas"))
 			{
 				if (\User::getUSER()->getIsSysAdmin())
@@ -32,53 +31,50 @@ namespace users
 				return $logView->getOverview();
 			}
 
-			if (!\User::getUSER()->hasRight("users", "manageusers") && !\User::getUSER()->isAdmin())
-			{
-				\AppRoot::redirect(APP_URL);
-			}
-			else
-			{
-				if ($section == "users")
-				{
-					$userController = new \users\controller\User();
+            if ($section == "users")
+            {
+                if (\User::getUSER()->isAdmin() || \User::getUSER()->hasRight("users", "manageusers"))
+                {
+                    $userController = new \users\controller\User();
 
-					if ($action == "resetpwform")
-						return User::getPasswordResetForm();
-					else if ($action == "banform")
-						return User::getBanUserForm();
-					else if ($action == "showlog")
-					{
-						$log = new \users\view\Log();
-						return $log->showUserLog(\Tools::REQUEST("id"));
-					}
-					else if ($action == "edit")
-					{
-						$user = new \users\model\User(\Tools::REQUEST("id"));
-						\AppRoot::title($user->getFullName());
-						return $userController->getEditForm(\Tools::REQUEST("id"));
-					}
-					else
-						$this->moduleSection = $userController->getOverviewSection();
-				}
+                    if ($action == "resetpwform")
+                        return User::getPasswordResetForm();
+                    else if ($action == "banform")
+                        return User::getBanUserForm();
+                    else if ($action == "showlog")
+                    {
+                        $log = new \users\view\Log();
+                        return $log->showUserLog(\Tools::REQUEST("id"));
+                    }
+                    else if ($action == "edit")
+                    {
+                        $user = new \users\model\User(\Tools::REQUEST("id"));
+                        \AppRoot::title($user->getFullName());
+                        return $userController->getEditForm(\Tools::REQUEST("id"));
+                    }
+                    else
+                        $this->moduleSection = $userController->getOverviewSection();
+                }
+                else
+                    return \Tools::noRightMessage();
+            }
 
-				if ($section == "usergroups")
-				{
-					if (\User::getUSER()->getIsCEO() || \User::getUSER()->hasRight("users", "managegroups"))
-					{
-						$controller = new \users\controller\UserGroup();
-						if ($action == "edit" || $action == "new")
-							return $controller->getEditForm(\Tools::REQUEST("id"));
-						else
-						{
-							$this->moduleTitle = "Usergroups";
-							$this->moduleSection = $controller->getOverviewSection();
-						}
-					}
-					else
-						return \Tools::noRightMessage();
-				}
-			}
-
+            if ($section == "usergroups")
+            {
+                if (\User::getUSER()->isAdmin() || \User::getUSER()->hasRight("users", "managegroups"))
+                {
+                    $controller = new \users\controller\UserGroup();
+                    if ($action == "edit" || $action == "new")
+                        return $controller->getEditForm(\Tools::REQUEST("id"));
+                    else
+                    {
+                        $this->moduleTitle = "Usergroups";
+                        $this->moduleSection = $controller->getOverviewSection();
+                    }
+                }
+                else
+                    return \Tools::noRightMessage();
+            }
 
 			return parent::getContent();
 		}
